--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: flutter_stepindicator
-description: a package step indicator for flutter
+description: FlutterStepIndicator is a versatile Flutter widget designed for creating step indicators to visualize multi-step processes.
 version: 0.0.2
 homepage: https://github.com/PuzzleTakX
 repository: https://github.com/PuzzleTakX/flutter_stepindicator
